frontend/test/should_fail/ret_004.grg
rule r : (Node, Node) {
	pattern {
		x: Node;
		y: Node;
	}
	replace {
		return(x, a);
	}
}

